# rstats

./: Cargo.toml  README.md
.github/workflows/: compilation.yml  compiles.yml  tests.yml
benches/: mybenchmark.rs
src/: error.rs  f64impls.rs  functions.rs  i64impls.rs  impls.rs  indices.rs  lib.rs  mutstats.rs  mutvec.rs  mutvecimpls.rs  stats.rs  statsf64.rs  statsg.rs  statsgen.rs  statsi64.rs  tests.rs  triangmat.rs  vecf64.rs  vecf64impls.rs  vecg.rs  vecimpls.rs  vecu8.rs  vecu8impls.rs  vecvec.rs  vecvecf64.rs  vecvecg.rs  vecvecimpls.rs  vecvecu8.rs  vimpls.rs
tests/: tests.rs
