[package]
name = "rstats"
version = "1.2.53"
authors = ["Libor Spacek"]
edition = "2021"
description = "Statistics, Information Measures, Data Analysis, Linear Algebra, Clifford Algebra, Machine Learning, Geometric Median, Matrix Decompositions, Mahalanobis Distance, Hulls, Multithreading.."
readme = "README.md"
homepage = "https://github.com/liborty/rstats"
repository = "https://github.com/liborty/rstats"
license = "Apache-2.0"
keywords = ["machine-learning","statistics","linear-algebra","geometric-median","data-analysis"]
categories = ["science","mathematics","algorithms","visualization","rust-patterns"]
include = [
    "src/*.rs", 
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
[badges]
maintenance = { status = "actively-developed" }
[lib]
[dependencies]
rayon = "1.7"
indxvec = "1.8"
medians = "2.3"   
ran = "1.1"
[dev-dependencies]
times = "1.0"
